# self_learning

./: .gitignore  README.md  chal-4.pl
CLRS/: LICENSE  README.md
Crypto/: 7.out.txt  Changes  MANIFEST  MYMETA.json  MYMETA.yml  Makefile  Makefile.PL  Makefile.old  README.md  attack.pl  conversions.pl
Crypto-prerewrite/: Changes  Makefile.PL  Makefile.old  README  notes.md
UNIX/: README.md
adt/: #README.md#  .#README.md  Makefile  Makefile.inc  README.md  test_template.c
blp/: README.md
cpl/: README.md  TODO.md
crypto/: .gitignore  6.txt  README.md  base-convertion.pl  chal-1.pl  cipher.pl  frequency.md  guess_keylen-chal-6.pl  hamming.pl  play.pl  set1_runnner.pl  xor.pl
data-structure-book/: README.md
gopl/: .gitignore  README.md
haskell/: resources.md
perl/: README.md
programming-perls/: README.md
pthw/: 14.py  Game.py  README.md  Room.py  cat.py  ex1.py  ex10.py  ex11.py  ex13.py  ex15_sample.txt  ex16.py  ex18.py  ex19.py  ex20.py  ex25.pl  ex25.py  ex3.py  ex30.py  ex31.py  ex32.py  ex33.py  ex39.py  ex40.py  ex41.py  ex41oo.py  ex42.py  ex43.py  ex5.py  ex9.py
python/: ex15.py  ex17.py  ex2.py  ex21.py  ex24.py  ex29.py  ex35.py  ex4.py  ex6.py  ex7.py  ex8.py  io.py  tmp
rust/mastering-rust/into_map_demo/: Cargo.toml
rust/mastering-rust/into_map_demo/into_map/: Cargo.toml
rust/mastering-rust/into_map_demo/into_map/src/: lib.rs
rust/mastering-rust/into_map_demo/into_map_derive/: Cargo.toml
rust/mastering-rust/into_map_demo/into_map_derive/src/: lib.rs
scheme/: README.md  sqrt.scm  test.scm  test.scm~
sedgewick/: README.md
(+3014 files in other folders)
