[package]
name = "into_map_demo"
version = "0.1.0"
authors = ["tcharding <me@tobin.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
into_map = { path = "into_map" }
into_map_derive = { path = "into_map_derive" }
